tests/baselines/reference/stringLiteralsAssertionsInEqualityComparisons02.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(1,9): error TS2365: Operator '===' cannot be applied to types '"foo"' and '"baz"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(1,19): error TS2352: Neither type '"bar"' nor type '"baz"' is assignable to the other.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(2,20): error TS2352: Neither type '"bar"' nor type '"foo"' is assignable to the other.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(3,9): error TS2365: Operator '==' cannot be applied to types '"foo"' and 'number'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts(3,19): error TS2352: Neither type 'string' nor type 'number' is assignable to the other.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInEqualityComparisons02.ts (5 errors) ====
    var a = "foo" === "bar" as "baz";
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '"foo"' and '"baz"'.
                      ~~~~~~~~~~~~~~
!!! error TS2352: Neither type '"bar"' nor type '"baz"' is assignable to the other.
    var b = "foo" !== ("bar" as "foo");
                       ~~~~~~~~~~~~~~
!!! error TS2352: Neither type '"bar"' nor type '"foo"' is assignable to the other.
    var c = "foo" == (<number>"bar");
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types '"foo"' and 'number'.
                      ~~~~~~~~~~~~~
!!! error TS2352: Neither type 'string' nor type 'number' is assignable to the other.